--- a/landing/src/App.css
+++ b/landing/src/App.css
@@ -60,6 +60,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -100,3 +101,36 @@ section{
   font-weight: 400;
   margin-bottom: 20px;
 }
+
+
+.light-theme .couter{
+  background: var(--counter-section-bg);
+}
+
+.light-theme .secondary{
+  border: 1px solid var(--primary-color);
+  color: #090238;
+  font-weight: 600;
+}
+
+.light-theme a {
+  font-weight: 500;
+}
+
+.light-theme .team__img{
+  background: #ddd;
+}
+
+
+@media only screen and (max-width: 1024px) {
+  .container{
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 768px){
+  .section{
+    padding: 40px 0px;
+  }
+}
+
