--- a/landing/src/components/UI/Blog.css
+++ b/landing/src/components/UI/Blog.css
@@ -51,3 +51,51 @@
     width: 33%;
     margin-top: -50px;
 }
+
+.light-theme .blog{
+    background: #effcff;
+
+}
+
+.light-theme .blog__item{
+    box-shadow: 5px 5px 15px -5px #999;
+}
+
+.light-theme .blog__item:nth-child(2){
+    border: 1px solid var(--primary-color);
+}
+
+
+@media only screen and (max-width: 992px){
+    .blog__top-content h2{
+        font-size: 1.2rem;
+    }
+}
+
+@media only screen and (max-width: 768px){
+    .blog__item{
+        width: 45%;
+        margin-bottom: 30px;
+    }
+    .blog__item:nth-child(2){
+        width: 50%;
+    }
+    .blog__wrapper{
+        flex-wrap: wrap;
+    }
+}
+
+
+@media only screen and (max-width: 576px){
+    .blog__item, .blog__item:nth-child(2){
+        width: 100%;
+    }
+    .blog__item:nth-child(2){
+        margin-top: 0;
+    }
+}
+
+
+
+
+
