--- a/landing/src/components/UI/Services.css
+++ b/landing/src/components/UI/Services.css
@@ -32,6 +32,14 @@
     border: 1px solid var(--primary-color);
 }
 
+.light-theme .services__icon {
+    background: var(--primary-color);
+}
+
+.light-theme .services__icon i{
+    color: #fff;
+}
+
 .services__icon i {
     font-size: 2rem;
     color: var(--primary-color);
@@ -41,3 +49,39 @@
     font-size: 1.3rem;
     margin-bottom: 30px;
 }
+
+
+@media only screen and (max-width: 992px){
+    .services__top-content h2{
+        font-size: 1.5rem;
+    }
+    .service__item-wrapper{
+        flex-wrap: wrap;
+    }
+    .services__item{
+        width: 31%;
+        margin-bottom: 30px;
+    }
+}
+
+
+@media only screen and (max-width: 768px){
+    .services__item{
+        width: 47.7%;
+    }
+    .services__title{
+        font-size: 1.2rem;
+    }
+}
+
+
+@media only screen and (max-width: 576px){
+    .services__item{
+        width: 100%;
+    }
+}
+
+
+
+
+
